# gym-form-tracker

./: .gitignore  README.md  pose_from_video.py
cpp-version/: CMakeLists.txt
cpp-version/src/: main.cpp
python-version/: convert_to_onnx.py  onnx_test.py  pose_from_video.py  requirements.txt
python-version/hands/: collect_data.py  gesture_recognizer.py  gesture_recognizer_knn.py  hand_kp_stream.py  hand_tracker.py  neural_net_algo.py  train_model.py  train_model_knn.py  view_dataset.py  visualize_knn_boundary.py
